@@ -22,6 +22,10 @@
         Current version of the plugin supports only the following versions of
         Apache Solr:
 
+        * 4.2.0
+
+        * 4.2.1
+
         * 4.3.0
 
         * 4.3.1
@@ -308,6 +312,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
 
             <!-- Attaches sources -->
